--- a/arch/arm/configs/cyanogenmod_e120k_defconfig
+++ b/arch/arm/configs/cyanogenmod_e120k_defconfig
@@ -414,7 +414,7 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_SDIO_SMEM=y
-CONFIG_MSM_MPDEC=y
+CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
@@ -462,7 +462,7 @@ CONFIG_KOR_MODEL_SHV_E120K=y
 CONFIG_SEC_AUDIO_DEVICE=y
 # CONFIG_SEC_EXTRA_VOLUME_SOL is not set
 CONFIG_SEC_DVFS=y
-# CONFIG_SEC_DVFS_DUAL is not set
+CONFIG_SEC_DVFS_DUAL=y
 CONFIG_SEC_DVFS_UNI=y
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
@@ -1789,7 +1789,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
 # CONFIG_GPIO_PCF857X is not set
-CONFIG_GPIO_SX150X=y
+# CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_ADP5588 is not set
 
 #
@@ -1964,7 +1964,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_TPS65010 is not set
 CONFIG_PMIC8058=y
 CONFIG_PMIC8901=y
-# CONFIG_PMIC8901_PRELOAD_DVDD is not set
+CONFIG_PMIC8901_PRELOAD_DVDD=y
 # CONFIG_TPS6507X is not set
 # CONFIG_MFD_TPS6586X is not set
 CONFIG_MARIMBA_CORE=y
@@ -3425,7 +3425,7 @@ CONFIG_CRYPTO_ECB=y
 # Hash modes
 #
 CONFIG_CRYPTO_HMAC=y
-CONFIG_CRYPTO_XCBC=y
+# CONFIG_CRYPTO_XCBC is not set
 # CONFIG_CRYPTO_VMAC is not set
 
 #
