--- a/arch/arm/configs/cyanogenmod_e120k_defconfig
+++ b/arch/arm/configs/cyanogenmod_e120k_defconfig
@@ -25,7 +25,6 @@ CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_GENERIC_BUG=y
-# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -414,7 +413,7 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_SDIO_SMEM=y
-CONFIG_MSM_DALRPC=y
+CONFIG_MSM_MPDEC=y
 CONFIG_MSM_DALRPC_TEST=m
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
@@ -458,11 +457,11 @@ CONFIG_KOR_MODEL_SHV_E120K=y
 # CONFIG_USA_MODEL_SGH_I577 is not set
 # CONFIG_SAMSUNG_8X60_TABLET is not set
 # CONFIG_SAMSUNG_MEMORY_LAYOUT_ARRANGE is not set
-
+# CONFIG_EUR_MODEL_GT_I9210 is not set
 CONFIG_SEC_AUDIO_DEVICE=y
 # CONFIG_SEC_EXTRA_VOLUME_SOL is not set
 CONFIG_SEC_DVFS=y
-CONFIG_SEC_DVFS_DUAL=y
+# CONFIG_SEC_DVFS_DUAL is not set
 CONFIG_SEC_DVFS_UNI=y
 CONFIG_MSM_IDLE_WAIT_ON_MODEM=0
 CONFIG_MSM_RPM_REGULATOR=y
@@ -496,7 +495,6 @@ CONFIG_MSM_JTAG=y
 CONFIG_MSM_ETM=y
 # CONFIG_MSM_QDSS is not set
 # CONFIG_CLOCK_MAP is not set
-CONFIG_MSM_SLEEP_STATS=y
 # CONFIG_MSM_SLEEP_STATS_DEVICE is not set
 # CONFIG_MSM_STANDALONE_POWER_COLLAPSE is not set
 CONFIG_MSM_GSBI9_UART=y
@@ -1789,7 +1787,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
 # CONFIG_GPIO_PCF857X is not set
-# CONFIG_GPIO_SX150X is not set
+CONFIG_GPIO_SX150X=y
 # CONFIG_GPIO_ADP5588 is not set
 
 #
@@ -1964,7 +1962,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_TPS65010 is not set
 CONFIG_PMIC8058=y
 CONFIG_PMIC8901=y
-CONFIG_PMIC8901_PRELOAD_DVDD=y
+# CONFIG_PMIC8901_PRELOAD_DVDD is not set
 # CONFIG_TPS6507X is not set
 # CONFIG_MFD_TPS6586X is not set
 CONFIG_MARIMBA_CORE=y
@@ -2375,7 +2373,7 @@ CONFIG_FB_MSM_DTV=y
 CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_HD720=y
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA_Q1 is not set
-CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH=y
+# CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH is not set
 # CONFIG_FB_MSM_MIPI_DSI_SAMSUNG is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
