--- a/arch/arm/configs/cyanogenmod_e120k_defconfig
+++ b/arch/arm/configs/cyanogenmod_e120k_defconfig
@@ -25,6 +25,7 @@ CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_GENERIC_BUG=y
+# CONFIG_ARCH_RANDOM is not set
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_IRQ_WORK=y
@@ -519,7 +520,7 @@ CONFIG_PMIC8058_XOADC_CAL=y
 # CONFIG_SEC_AUDIO_I2S_DRIVING_CURRENT is not set
 # CONFIG_Q1_KOR_AUDIO is not set
 # CONFIG_NOISE_REDUCE_FOR_WIFI_ON is not set
-CONFIG_SEC_LOG_LAST_KMSG=y
+# CONFIG_SEC_LOG_LAST_KMSG is not set
 # CONFIG_ANDROID_WIP is not set
 # CONFIG_COMPACTION_RETRY is not set
 
@@ -1962,7 +1963,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_TPS65010 is not set
 CONFIG_PMIC8058=y
 CONFIG_PMIC8901=y
-# CONFIG_PMIC8901_PRELOAD_DVDD is not set
+CONFIG_PMIC8901_PRELOAD_DVDD=y
 # CONFIG_TPS6507X is not set
 # CONFIG_MFD_TPS6586X is not set
 CONFIG_MARIMBA_CORE=y
@@ -2334,6 +2335,7 @@ CONFIG_MSM_VIDC=y
 CONFIG_MSM_VIDC_1080P=y
 CONFIG_MSM_VIDC_VENC=y
 CONFIG_MSM_VIDC_VDEC=y
+# CONFIG_MSM_VIDC_CONTENT_PROTECTION is not set
 CONFIG_VIDEO_MHL_V2=y
 CONFIG_MHL_D3_SUPPORT=y
 # CONFIG_MHL_NEW_CBUS_MSC_CMD is not set
@@ -2373,7 +2375,7 @@ CONFIG_FB_MSM_DTV=y
 CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_HD720=y
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA is not set
 # CONFIG_FB_MSM_MIPI_DSI_S6E8AA0_WXGA_Q1 is not set
-# CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH is not set
+CONFIG_FB_MSM_MIPI_DSI_ESD_REFRESH=y
 # CONFIG_FB_MSM_MIPI_DSI_SAMSUNG is not set
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
@@ -2454,6 +2456,7 @@ CONFIG_FB_MSM_HDMI_3D=y
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
 CONFIG_FB_MSM_HDMI_MSM_PANEL=y
 # CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
+CONFIG_FB_MSM_HDMI_MSM_PANEL_HDCP_SUPPORT=y
 # CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
 CONFIG_FB_MSM_HDMI_MHL=y
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
@@ -3254,13 +3257,13 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_DEBUG_MUTEXES=y
+# CONFIG_DEBUG_SPINLOCK is not set
+# CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_LOCK_STAT is not set
-CONFIG_DEBUG_SPINLOCK_SLEEP=y
+# CONFIG_DEBUG_SPINLOCK_SLEEP is not 
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
@@ -3353,7 +3356,7 @@ CONFIG_SEC_DEBUG_POWERCOLLAPSE_LOG=y
 # Security options
 #
 CONFIG_KEYS=y
-# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
+CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
