--- a/arch/arm/configs/cyanogenmod_e120k_defconfig
+++ b/arch/arm/configs/cyanogenmod_e120k_defconfig
@@ -414,7 +414,7 @@ CONFIG_MSM_RPC_OEM_RAPI=y
 CONFIG_MSM_RMT_STORAGE_CLIENT=y
 # CONFIG_MSM_RMT_STORAGE_CLIENT_STATS is not set
 CONFIG_MSM_SDIO_SMEM=y
-CONFIG_MSM_MPDEC=y
+CONFIG_MSM_DALRPC=y
 CONFIG_MSM_DALRPC_TEST=m
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
@@ -1217,13 +1217,13 @@ CONFIG_PMIC8058_PWM=y
 # CONFIG_PMIC8XXX_NFC is not set
 CONFIG_PMIC8XXX_UPL=y
 CONFIG_PMIC8058_XOADC=y
-# CONFIG_TZCOM is not set
+CONFIG_TZCOM=y
 # CONFIG_QSEECOM is not set
 # CONFIG_QFP_FUSE is not set
 CONFIG_SENSORS_K3DH=y
 CONFIG_SEC_MISC=y
 # CONFIG_C2PORT is not set
-# CONFIG_GENERIC_BLN is not set
+CONFIG_GENERIC_BLN=y
 
 #
 # EEPROM support
@@ -1788,7 +1788,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
 # CONFIG_GPIO_PCF857X is not set
-CONFIG_GPIO_SX150X=y
+# CONFIG_GPIO_SX150X is not set
 # CONFIG_GPIO_ADP5588 is not set
 
 #
@@ -1963,7 +1963,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_TPS65010 is not set
 CONFIG_PMIC8058=y
 CONFIG_PMIC8901=y
-CONFIG_PMIC8901_PRELOAD_DVDD=y
+# CONFIG_PMIC8901_PRELOAD_DVDD is not set
 # CONFIG_TPS6507X is not set
 # CONFIG_MFD_TPS6586X is not set
 CONFIG_MARIMBA_CORE=y
@@ -3257,13 +3257,13 @@ CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_PREEMPT is not set
 # CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
-# CONFIG_DEBUG_SPINLOCK is not set
-# CONFIG_DEBUG_MUTEXES is not set
+CONFIG_DEBUG_SPINLOCK=y
+CONFIG_DEBUG_MUTEXES=y
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
 # CONFIG_LOCK_STAT is not set
-# CONFIG_DEBUG_SPINLOCK_SLEEP is not 
+CONFIG_DEBUG_SPINLOCK_SLEEP=y
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_STACK_USAGE is not set
@@ -3323,7 +3323,7 @@ CONFIG_BRANCH_PROFILE_NONE=y
 CONFIG_KPROBE_EVENT=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
-# CONFIG_DYNAMIC_DEBUG is not set
+CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_SAMPLES is not set
@@ -3356,7 +3356,7 @@ CONFIG_SEC_DEBUG_POWERCOLLAPSE_LOG=y
 # Security options
 #
 CONFIG_KEYS=y
-CONFIG_KEYS_DEBUG_PROC_KEYS=y
+# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
 CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
@@ -3426,7 +3426,7 @@ CONFIG_CRYPTO_ECB=y
 # Hash modes
 #
 CONFIG_CRYPTO_HMAC=y
-# CONFIG_CRYPTO_XCBC is not set
+CONFIG_CRYPTO_XCBC=y
 # CONFIG_CRYPTO_VMAC is not set
 
 #
